argocd/platform/forgejo/prereqs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: forgejo
  labels:
    trust.home.arpa/enabled: "true"
