argocd/platform/forgejo/prereqs/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: forgejo
  namespace: forgejo
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: 192.168.100.244
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: git.home.arpa
      allowedRoutes:
        namespaces:
          from: Same
    - name: https
      protocol: HTTPS
      port: 443
      hostname: git.home.arpa
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: forgejo-tls
      allowedRoutes:
        namespaces:
          from: Same
